opam-version: "2.0"
name: "dream-httpaf-lwt-unix"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/httpaf"
bug-reports: "https://github.com/inhabitedtype/httpaf/issues"
dev-repo: "git+https://github.com/inhabitedtype/httpaf.git"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt-unix"
  "dream-httpaf" {>= "0.6.0"}
  "dune" {>= "1.5.0"}
  "dream-httpaf-lwt"
  "lwt" {>= "2.4.7"}
  "gluten-lwt-unix" {>= "0.2.0"}
]
pin-depends: [
  [ "dream-httpaf.dev" "git+https://github.com/clecat/httpaf.git#fork" ]
  [ "dream-httpaf-lwt.dev" "git+https://github.com/clecat/httpaf.git#fork" ]
]
synopsis: "Lwt + Unix support for http/af"
