opam-version: "2.0"
name: "dream-httpaf-lwt"
maintainer: "Spiros Eliopoulos <spiros@inhabitedtype.com>"
authors: [
  "Anton Bachin <antonbachin@yahoo.com>"
  "Spiros Eliopoulos <spiros@inhabitedtype.com>"
]
license: "BSD-3-clause"
homepage: "https://github.com/inhabitedtype/httpaf"
bug-reports: "https://github.com/inhabitedtype/httpaf/issues"
dev-repo: "git+https://github.com/inhabitedtype/httpaf.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dream-httpaf"
  "dune"
  "lwt"
  "dream-gluten-lwt" {>= "0.2.0"}
]
pin-depends: [
  [ "dream-httpaf.dev" "git+https://github.com/clecat/httpaf.git#fork" ]
]
synopsis: "Lwt support for http/af"
